@@ -1,5 +1,7 @@
 2010-12-11  Martin Maechler  <maechler@stat.math.ethz.ch>
 
+	* R/products.R: dimension fixing in some Matrix o vector  [t]crossprod()s.
+
 	* src/Csparse.c (nz2Csparse, nz_pattern_to_Csparse): new utilities,
 	callable from C and R.
 	(Csparse_dense_prod): check pattern matrix and coerce to "d..".
